get status with wait 200ms
