# routers/commentsRouter_controllers.go
@@ -29,6 +29,13 @@ func init() {
 
 	beego.GlobalControllerRouter["github.com/alexshnup/mqtt-http-gw/controllers:BarrierController"] = append(beego.GlobalControllerRouter["github.com/alexshnup/mqtt-http-gw/controllers:BarrierController"],
 		beego.ControllerComments{
+			Method: "GetStatus",
+			Router: `/get-status-adc/:barrierId`,
+			AllowHTTPMethods: []string{"get"},
+			Params: nil})
+
+	beego.GlobalControllerRouter["github.com/alexshnup/mqtt-http-gw/controllers:BarrierController"] = append(beego.GlobalControllerRouter["github.com/alexshnup/mqtt-http-gw/controllers:BarrierController"],
+		beego.ControllerComments{
 			Method: "GetAll",
 			Router: `/`,
 			AllowHTTPMethods: []string{"get"},
